<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:alpha="0.4"
                    android:scaleType="center"
                    android:src="@drawable/top_bg" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#ffffff"
                    android:textSize="36sp"></TextView>

            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="25dp"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="83dp"
                        android:layout_margin="10dp"
                        android:src="@drawable/recover" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Recovered"
                        android:textColor="#388E3C"
                        android:textStyle="bold"></TextView>

                    <TextView
                        android:id="@+id/covid_recover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="15dp"
                        android:text="recover"
                        android:textColor="#388E3C"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="83dp"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:src="@drawable/death_image" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Deaths"
                        android:textColor="#D32F2F"
                        android:textStyle="bold"></TextView>


                    <TextView
                        android:id="@+id/covid_death"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="Death"
                        android:textColor="#D32F2F"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="83dp"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:src="@drawable/patient" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Active"
                        android:textColor="#1976D2"
                        android:textStyle="bold"></TextView>


                    <TextView
                        android:id="@+id/covid_active"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="Active"
                        android:textColor="#1976D2"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="78dp"
                        android:layout_height="83dp"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:src="@drawable/confirmed" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Confirmed"
                        android:textColor="#FBC02D"
                        android:textStyle="bold"></TextView>


                    <TextView
                        android:id="@+id/covid_confirmed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:text="Confirmed"
                        android:textColor="#FBC02D"
                        android:textSize="16sp"
                        android:textStyle="bold"></TextView>


                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/precaution1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/wash_hands"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/wash_hands"
                        android:textColor="#ffffffff"
                        android:textSize="20sp"></TextView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/precaution2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg4" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/social_distancing"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/social_distancing"
                        android:textColor="#ffffffff"
                        android:textSize="20sp"></TextView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/precaution3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg4" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/avoid"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/avoid"
                        android:textColor="#ffffffff"
                        android:textSize="20sp"></TextView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/precaution4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg4" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/isolation"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/isolation"
                        android:textColor="#ffffffff"
                        android:textSize="20sp"></TextView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/precaution5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/cardview_dark_background"
                app:cardCornerRadius="15dp"
                app:cardElevation="10dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.4"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg4" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:src="@drawable/update"></ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/update"
                        android:textColor="#ffffffff"
                        android:textSize="20sp"></TextView>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:text="LAST UPDATED"
                    android:textSize="20sp"></TextView>

                <TextView
                    android:id="@+id/last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:textSize="20sp"></TextView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>